--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13831,4 +13831,33 @@ label {
   margin-left: 1rem;
 }
 
+.content-404 {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  font-family: 'Consolas';
+  height: 100vh;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.content-404 .text-container {
+  -webkit-box-flex: 0;
+  -ms-flex: 0;
+  flex: 0;
+}
+
+.content-404 .title-404 {
+  font-size: 2rem;
+}
+
 /*# sourceMappingURL=style.css.map */
