--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -1092,7 +1092,7 @@ $transition-fade:             opacity .3s linear
 
 
 // font Awesome fonts path
-$fa-font-path: '../fonts'
+$fa-font-path: '../fonts/FontAwesome'
 
 // Headder overlay color
 $overlay-color: rgba($white, .7)
