--- a/src/css/_404.sass
+++ b/src/css/_404.sass
@@ -1,8 +1,11 @@
+.error404
+    background-color: $gray-100
+
 .content-404
     align-items: center
     display: flex
     flex-direction: column
-    font-family: 'Consolas'
+    font-family: 'Consola', monospace
     height: 100vh
     justify-content: center
     margin: 0 auto
