--- a/src/css/_social.sass
+++ b/src/css/_social.sass
@@ -41,7 +41,7 @@
         @include transition
         color: $white
 
-        @each $profile, $color in $social-profiles
+        @each $profile, $color in $social-shares
             &.social-icon-#{$profile}
                 .social-link
                     background-color: $color
