--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -36,10 +36,10 @@ $linkedin: rgba(29, 135, 189, 1)
 // Github
 $github: rgba(51, 51, 51, 1)
 
-// Pinterest color
+// Pinterest
 $pinterest: rgba(189, 8, 28, 1)
 
-// Reddit color
+// Reddit
 $reddit: rgba(95, 153, 207, 1)
 
 // Mail
