MInor design updates

--- a/src/css/_footer.sass
+++ b/src/css/_footer.sass
@@ -6,13 +6,15 @@
     padding: 2 * $spacer
     text-align: center
 
-    .brand,
-    .contact
+    .social-profiles,
+    .brand-footer
         margin-bottom: 2 * $spacer
         opacity: .7
 
     .footer-logo
-        margin-bottom: 2 * $spacer
+        margin: 0
 
-    .contact-info
-        margin-top: 2 * $spacer
+    .copyright-text
+        font-size: .9 * $font-size-base
+        margin-bottom: 0
+        opacity: .5
