--- a/src/css/_header.sass
+++ b/src/css/_header.sass
@@ -1,12 +1,11 @@
-.header-overlay
+.header
     align-items: center
-    background-color: $overlay-color
     display: flex
     flex-direction: column
+    height: 400px
     justify-content: center
-    padding-top: 100px
-    position: relative
-    width: 100%
+    padding-top: 50px
+    text-align: center
 
 .custom-logo
     height: 100px
