--- a/src/css/_navbar.sass
+++ b/src/css/_navbar.sass
@@ -96,8 +96,10 @@
 
         .nav-link
             @include transition
-            font-size: 1.125 * $font-size-base
-            font-weight: 400
+            font:
+                family: 'Roboto Light'
+                size: 1.125 * $font-size-base
+                weight: 200
             margin: 0
             padding: $spacer 1.5 * $spacer
 
