--- a/src/css/_page-contact.sass
+++ b/src/css/_page-contact.sass
@@ -1,5 +1,6 @@
 .contact-links
     list-style: none
+    padding-left: 0
 
     .contact-link
         align-items: center
@@ -12,6 +13,5 @@
             color: $black
             min-width: 2.5 * $spacer
 
-        .link
-            font-size: 1.125 * $font-size-base
-            margin-left: $spacer
+.paypal-instructions
+    margin-bottom: 1.5 * $spacer
