--- a/src/css/_social.sass
+++ b/src/css/_social.sass
@@ -51,4 +51,5 @@
                         background-color: darken($color, 10%)
 
         .social-link
+            color: $white
             display: block
