--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -2,6 +2,9 @@
 $white: #fff
 $black: #292b2c
 $blue: #336397
+$blue-hover: lighten($blue, 10%)
+
+$font-size-base: 1.125rem
 
 // Fade transition
 $transition-fade: opacity .3s linear
@@ -57,9 +60,12 @@ $social-profiles: ('facebook-f': $facebook, 'twitter': $twitter, 'linkedin-in': 
 // Menu toggle border
 $toggler-border: 2px solid $black
 
-// Chat message colors
-$chat-color-1: #badefc
-$chat-color-2: #43a6dd
+$send-mail-width: 180px
 
-// Debugging color
-$debug: #ff4500
+// Spinner
+$loading-spinner-diameter: 28px
+$loading-spinner-stroke-width: 4px
+$loading-spinner-opacity: .8
+$loading-spinner-stroke-style: solid
+$loading-spinner-speed: .7s
+$transparent: rgba(0, 0, 0, 0)
