--- a/src/css/_fonts.sass
+++ b/src/css/_fonts.sass
@@ -1,4 +1,4 @@
-// Roboto lativ
+// Roboto Regular
 @font-face
     font-family: 'Roboto'
     font-style: normal
@@ -6,10 +6,34 @@
     src: local('Roboto'), local('Roboto-Regular'), url('../fonts/Roboto/Roboto-Regular.woff2') format('woff2')
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000
 
-// Consola latin
+// Roboto Light
+@font-face
+    font-family: 'Roboto Light'
+    font-style: normal
+    font-weight: 300
+    src: local('Roboto Light'), local('Roboto-Light'), url('../fonts/Roboto/Roboto-Light.woff') format('woff2')
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000
+
+// Consola Regular
 @font-face
     font-family: 'Consola'
     font-style: normal
     font-weight: 400
-    src: local('Consola'), local('Consola'), url('../fonts/Consola/Consola.woff2') format('woff2')
+    src: local('Consola'), url('../fonts/Consola/Consola.woff2') format('woff2')
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000
+
+// Oswald Regular
+@font-face
+    font-family: 'Oswald'
+    font-style: normal
+    font-weight: 400
+    src: local('Oswald'), local('Oswald-Regular'), url('../fonts/Oswald/Oswald-Regular.woff2') format('woff2')
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000
+
+// Oswald Light
+// @font-face
+//     font-family: 'Oswald Light'
+//     font-style: normal
+//     font-weight: 200
+//     src: local('Oswald-Light'), url('../fonts/Oswald/Oswald-Light.woff2') format('woff2')
+//     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000
