--- a/src/css/_frontpage.sass
+++ b/src/css/_frontpage.sass
@@ -15,13 +15,15 @@
         opacity: .3
 
     .service-title
-        font-size: $h4-font-size
+        font:
+            size: $h4-font-size
+            weight: 600
         margin: 0
         padding-bottom: 2 * $spacer
         padding-top: 2 * $spacer
+        text-transform: uppercase
 
     .service-text
-        font-size: 1.125 * $font-size-base
         margin: 0
         text-align: justify
 
