--- a/src/css/_fonts.sass
+++ b/src/css/_fonts.sass
@@ -1,5 +1,6 @@
 // Roboto Regular
 @font-face
+    font-display: auto
     font-family: 'Roboto'
     font-style: normal
     font-weight: 400
@@ -8,6 +9,7 @@
 
 // Roboto Light
 @font-face
+    font-display: auto
     font-family: 'Roboto Light'
     font-style: normal
     font-weight: 300
@@ -16,6 +18,7 @@
 
 // Consola Regular
 @font-face
+    font-display: auto
     font-family: 'Consola'
     font-style: normal
     font-weight: 400
@@ -24,6 +27,7 @@
 
 // Oswald Regular
 @font-face
+    font-display: auto
     font-family: 'Oswald'
     font-style: normal
     font-weight: 400
@@ -32,6 +36,7 @@
 
 // Oswald Light
 // @font-face
+//     font-display: auto
 //     font-family: 'Oswald Light'
 //     font-style: normal
 //     font-weight: 200
