--- a/src/css/_frontpage.sass
+++ b/src/css/_frontpage.sass
@@ -7,7 +7,7 @@
     flex-basis: 100%
     flex-grow: 0
     margin: 1.5 * $spacer
-    padding: 1 * $spacer
+    padding: 0
     text-align: center
 
     .service-icon
@@ -43,6 +43,7 @@
 @include media-breakpoint-up(md)
     .home-service
         flex-basis: 40%
+        padding: $spacer
 
 @include media-breakpoint-up(lg)
     .home-service
