--- a/src/css/_header.sass
+++ b/src/css/_header.sass
@@ -1,17 +1,7 @@
-.header
+.wp-custom-header
     align-items: center
     display: flex
     flex-direction: column
     height: 400px
     justify-content: center
-    padding-top: 50px
     text-align: center
-
-.custom-logo
-    height: 100px
-    margin-bottom: 2rem
-    width: auto
-
-@include media-breakpoint-up(md)
-    .header-overlay
-        padding-top: 0
