--- a/src/css/_container.sass
+++ b/src/css/_container.sass
@@ -2,6 +2,9 @@
     max-width: $content-max-width
     width: 100%
 
+.main-container
+    margin-top: 2 * $spacer
+
 // .nav-container
 //     // border: solid orangered
 //     display: flex
@@ -12,8 +15,8 @@
 //     transform: translateX(-50%)
 //     z-index: 100
 
-.main-container
-    margin-top: 4 * $spacer
+// .main-container
+//     margin-top: 4 * $spacer
 
 // .footer-nav-container
 //     display: flex
