--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12915,6 +12915,144 @@ a.link {
   animation: none;
 }
 
+.icon-menu {
+  height: 40px;
+  opacity: .7;
+  padding: 0;
+  position: absolute;
+  -webkit-transition: opacity 500ms ease-in-out;
+  -o-transition: opacity 500ms ease-in-out;
+  transition: opacity 500ms ease-in-out;
+  width: 40px;
+}
+
+.icon-menu:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.icon-menu:hover .menu-bar-1 {
+  -webkit-animation: menu-ani 600ms ease-in-out;
+  animation: menu-ani 600ms ease-in-out;
+}
+
+.icon-menu:hover .menu-bar-2 {
+  -webkit-animation: menu-ani 600ms 100ms ease-in-out;
+  animation: menu-ani 600ms 100ms ease-in-out;
+}
+
+.icon-menu:hover .menu-bar-3 {
+  -webkit-animation: menu-ani-bottom 600ms 200ms ease-in-out;
+  animation: menu-ani-bottom 600ms 200ms ease-in-out;
+}
+
+.icon-menu.active .menu-bar-2 {
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center;
+}
+
+.icon-menu.active .menu-bar-3 {
+  display: none;
+}
+
+@-webkit-keyframes menu-ani {
+  0% {
+    width: 30px;
+  }
+  20% {
+    width: 2px;
+  }
+  80% {
+    width: 34px;
+  }
+  100% {
+    width: 30px;
+  }
+}
+
+@keyframes menu-ani {
+  0% {
+    width: 30px;
+  }
+  20% {
+    width: 2px;
+  }
+  80% {
+    width: 34px;
+  }
+  100% {
+    width: 30px;
+  }
+}
+
+@-webkit-keyframes menu-ani-bottom {
+  0% {
+    width: 24px;
+  }
+  20% {
+    width: 2px;
+  }
+  75% {
+    width: 34px;
+  }
+  100% {
+    width: 24px;
+  }
+}
+
+@keyframes menu-ani-bottom {
+  0% {
+    width: 24px;
+  }
+  20% {
+    width: 2px;
+  }
+  75% {
+    width: 34px;
+  }
+  100% {
+    width: 24px;
+  }
+}
+
+.icon-menu-close {
+  -webkit-animation: bounce-out 400ms ease-in-out;
+  animation: bounce-out 400ms ease-in-out;
+  background: #00FFA7;
+  -webkit-box-shadow: 0 10px 10px -4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 10px -4px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  height: 24px;
+  left: 26px;
+  padding: 4px;
+  position: fixed;
+  top: 26px;
+  -webkit-transition: -webkit-transform 150ms ease-in-out;
+  transition: -webkit-transform 150ms ease-in-out;
+  -o-transition: transform 150ms ease-in-out;
+  transition: transform 150ms ease-in-out;
+  transition: transform 150ms ease-in-out, -webkit-transform 150ms ease-in-out;
+  z-index: 10;
+}
+
+.icon-menu-close:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.icon-menu-close.hidden {
+  display: none;
+}
+
+@media (min-width: 800px) {
+  .icon-menu-close {
+    left: 46px;
+    top: 46px;
+  }
+}
+
 .navbar-brand {
   margin: 0;
   padding: 0;
