--- a/src/css/_navbar.sass
+++ b/src/css/_navbar.sass
@@ -81,6 +81,93 @@
             .menu-item-3
                 animation: none
 
+.icon-menu
+    height: 40px
+    opacity: .7
+    padding: 0
+    position: absolute
+    transition: opacity 500ms ease-in-out
+    width: 40px
+
+    &:hover
+        cursor: pointer
+        opacity: 1
+
+        .menu-bar-1
+            animation: menu-ani 600ms ease-in-out
+
+        .menu-bar-2
+            animation: menu-ani 600ms 100ms ease-in-out
+
+        .menu-bar-3
+            animation: menu-ani-bottom 600ms 200ms ease-in-out
+
+    &.active
+
+        // .menu-bar-1,
+        // .menu-bar-3
+        //     display: none
+
+        .menu-bar-2
+            // transform: rotate(45deg)
+            transform-origin: center
+
+        .menu-bar-3
+            display: none
+
+@keyframes menu-ani
+    0%
+        width: 30px
+
+    20%
+        width: 2px
+
+    80%
+        width: 34px
+
+    100%
+        width: 30px
+
+@keyframes menu-ani-bottom
+    0%
+        width: 24px
+
+    20%
+        width: 2px
+
+    75%
+        width: 34px
+
+    100%
+        width: 24px
+
+
+.icon-menu-close
+    animation: bounce-out 400ms ease-in-out
+    background: #00FFA7
+    box-shadow: 0 10px 10px -4px rgba(0, 0, 0, .2)
+    cursor: pointer
+    height: 24px
+    left: 26px
+    padding: 4px
+    position: fixed
+    top: 26px
+    transition: transform 150ms ease-in-out
+    z-index: 10
+    // width: 24px
+
+    &:hover
+        transform: scale(1.1)
+
+    &.hidden
+        display: none
+
+@media (min-width: 800px)
+    .icon-menu-close
+        left: 46px
+        top: 46px
+
+
 .navbar-brand
     margin: 0
     padding: 0
