--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12615,61 +12615,61 @@ a.link {
 
 @-webkit-keyframes toggler-animation {
   0% {
-    width: 70%;
+    width: 30px;
   }
   20% {
-    width: 5%;
+    width: 2px;
   }
   80% {
-    width: 80%;
+    width: 34px;
   }
   100% {
-    width: 70%;
+    width: 30px;
   }
 }
 
 @keyframes toggler-animation {
   0% {
-    width: 70%;
+    width: 30px;
   }
   20% {
-    width: 5%;
+    width: 2px;
   }
   80% {
-    width: 80%;
+    width: 34px;
   }
   100% {
-    width: 70%;
+    width: 30px;
   }
 }
 
 @-webkit-keyframes toggler-animation-short {
   0% {
-    width: 50%;
+    width: 2px;
   }
   20% {
-    width: 5%;
+    width: 2px;
   }
   75% {
-    width: 80%;
+    width: 34px;
   }
   100% {
-    width: 50%;
+    width: 24px;
   }
 }
 
 @keyframes toggler-animation-short {
   0% {
-    width: 50%;
+    width: 2px;
   }
   20% {
-    width: 5%;
+    width: 2px;
   }
   75% {
-    width: 80%;
+    width: 34px;
   }
   100% {
-    width: 50%;
+    width: 24px;
   }
 }
 
@@ -12807,250 +12807,98 @@ a.link {
   padding: 0;
 }
 
+.mobile-menu-overlay {
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  background-color: rgba(41, 43, 44, 0.2);
+  height: 100vh;
+  opacity: 0;
+  position: fixed;
+  visibility: hidden;
+  width: 100vh;
+  z-index: 2000;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+  .mobile-menu-overlay {
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+  }
+}
+
+.mobile-menu-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
 .navbar-toggler {
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   border: 0;
   height: 40px;
   left: 30px;
-  opacity: .7;
+  padding: 0;
   position: absolute;
   top: 30px;
-  -webkit-transition: opacity 500ms ease-in-out, background-color 300ms ease-in-out;
-  -o-transition: opacity 500ms ease-in-out, background-color 300ms ease-in-out;
-  transition: opacity 500ms ease-in-out, background-color 300ms ease-in-out;
   width: 40px;
 }
 
-.navbar-toggler .menu-item-1,
-.navbar-toggler .menu-item-2,
-.navbar-toggler .menu-item-3 {
-  background: #292b2c;
-  display: block;
-  height: 3px;
-  left: 0;
-  margin-left: 15%;
-  opacity: 1;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
-  width: 70%;
+@media screen and (prefers-reduced-motion: reduce) {
+  .navbar-toggler {
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+  }
 }
 
-.navbar-toggler .menu-item-1 {
-  top: 9px;
+.navbar-toggler .menu-bar {
+  fill: #292b2c;
 }
 
-.navbar-toggler .menu-item-2 {
-  top: calc(50% - 1px);
-}
-
-.navbar-toggler .menu-item-3 {
-  top: calc(100% - 11px);
-  width: 50%;
-}
-
-.navbar-toggler:focus {
-  outline: 0;
+.navbar-toggler .close-bar {
+  display: none;
 }
 
 .navbar-toggler:hover {
-  opacity: 1;
+  cursor: pointer;
 }
 
-.navbar-toggler:hover .menu-item-1 {
+.navbar-toggler:hover .menu-bar-1 {
   -webkit-animation: toggler-animation 600ms ease-in-out;
   animation: toggler-animation 600ms ease-in-out;
 }
 
-.navbar-toggler:hover .menu-item-2 {
+.navbar-toggler:hover .menu-bar-2 {
   -webkit-animation: toggler-animation 600ms 100ms ease-in-out;
   animation: toggler-animation 600ms 100ms ease-in-out;
 }
 
-.navbar-toggler:hover .menu-item-3 {
+.navbar-toggler:hover .menu-bar-3 {
   -webkit-animation: toggler-animation-short 600ms 200ms ease-in-out;
   animation: toggler-animation-short 600ms 200ms ease-in-out;
 }
 
 .navbar-toggler.active {
-  background-color: #fff;
-  -webkit-box-shadow: 0 0.5rem 1rem rgba(41, 43, 44, 0.15);
-  box-shadow: 0 0.5rem 1rem rgba(41, 43, 44, 0.15);
-  opacity: 1;
-  z-index: 1000;
+  background-color: #336397;
+  z-index: 10000;
 }
 
-.navbar-toggler.active .menu-item-1,
-.navbar-toggler.active .menu-item-2,
-.navbar-toggler.active .menu-item-3 {
-  margin: 0 15%;
-  top: calc(50% - 1px);
-  width: 70%;
-}
-
-.navbar-toggler.active .menu-item-1 {
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.navbar-toggler.active .menu-item-2 {
+.navbar-toggler.active .menu-bar {
   display: none;
 }
 
-.navbar-toggler.active .menu-item-3 {
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+.navbar-toggler.active .close-bar {
+  display: block;
+  fill: #fff;
 }
 
-.navbar-toggler.active:hover .menu-item-1,
-.navbar-toggler.active:hover .menu-item-2,
-.navbar-toggler.active:hover .menu-item-3 {
-  -webkit-animation: none;
-  animation: none;
-}
-
-.icon-menu {
-  height: 40px;
-  opacity: .7;
-  padding: 0;
-  position: absolute;
-  -webkit-transition: opacity 500ms ease-in-out;
-  -o-transition: opacity 500ms ease-in-out;
-  transition: opacity 500ms ease-in-out;
-  width: 40px;
-}
-
-.icon-menu:hover {
-  cursor: pointer;
-  opacity: 1;
-}
-
-.icon-menu:hover .menu-bar-1 {
-  -webkit-animation: menu-ani 600ms ease-in-out;
-  animation: menu-ani 600ms ease-in-out;
-}
-
-.icon-menu:hover .menu-bar-2 {
-  -webkit-animation: menu-ani 600ms 100ms ease-in-out;
-  animation: menu-ani 600ms 100ms ease-in-out;
-}
-
-.icon-menu:hover .menu-bar-3 {
-  -webkit-animation: menu-ani-bottom 600ms 200ms ease-in-out;
-  animation: menu-ani-bottom 600ms 200ms ease-in-out;
-}
-
-.icon-menu.active .menu-bar-2 {
-  -webkit-transform-origin: center;
-  -ms-transform-origin: center;
-  transform-origin: center;
-}
-
-.icon-menu.active .menu-bar-3 {
-  display: none;
-}
-
-@-webkit-keyframes menu-ani {
-  0% {
-    width: 30px;
-  }
-  20% {
-    width: 2px;
-  }
-  80% {
-    width: 34px;
-  }
-  100% {
-    width: 30px;
-  }
-}
-
-@keyframes menu-ani {
-  0% {
-    width: 30px;
-  }
-  20% {
-    width: 2px;
-  }
-  80% {
-    width: 34px;
-  }
-  100% {
-    width: 30px;
-  }
-}
-
-@-webkit-keyframes menu-ani-bottom {
-  0% {
-    width: 24px;
-  }
-  20% {
-    width: 2px;
-  }
-  75% {
-    width: 34px;
-  }
-  100% {
-    width: 24px;
-  }
-}
-
-@keyframes menu-ani-bottom {
-  0% {
-    width: 24px;
-  }
-  20% {
-    width: 2px;
-  }
-  75% {
-    width: 34px;
-  }
-  100% {
-    width: 24px;
-  }
-}
-
-.icon-menu-close {
-  -webkit-animation: bounce-out 400ms ease-in-out;
-  animation: bounce-out 400ms ease-in-out;
-  background: #00FFA7;
-  -webkit-box-shadow: 0 10px 10px -4px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 10px 10px -4px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  height: 24px;
-  left: 26px;
-  padding: 4px;
-  position: fixed;
-  top: 26px;
-  -webkit-transition: -webkit-transform 150ms ease-in-out;
-  transition: -webkit-transform 150ms ease-in-out;
-  -o-transition: transform 150ms ease-in-out;
-  transition: transform 150ms ease-in-out;
-  transition: transform 150ms ease-in-out, -webkit-transform 150ms ease-in-out;
-  z-index: 10;
-}
-
-.icon-menu-close:hover {
+.navbar-toggler.active:hover {
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
   transform: scale(1.1);
-}
-
-.icon-menu-close.hidden {
-  display: none;
-}
-
-@media (min-width: 800px) {
-  .icon-menu-close {
-    left: 46px;
-    top: 46px;
-  }
 }
 
 .navbar-brand {
@@ -13106,7 +12954,7 @@ a.link {
   position: relative;
   top: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 10000;
 }
 
 .navbar-header .container-fluid .navbar-nav-header .active > .nav-link {
@@ -13127,11 +12975,11 @@ a.link {
 }
 
 .navbar-nav-header {
-  -webkit-animation: menu-animation 600ms ease-in-out;
-  animation: menu-animation 600ms ease-in-out;
+  -webkit-animation: menu-animation 300ms ease-in-out;
+  animation: menu-animation 300ms ease-in-out;
   background-color: #fff;
-  -webkit-box-shadow: 0 0.5rem 1rem rgba(41, 43, 44, 0.15);
-  box-shadow: 0 0.5rem 1rem rgba(41, 43, 44, 0.15);
+  -webkit-box-shadow: 0 1rem 3rem rgba(41, 43, 44, 0.175);
+  box-shadow: 0 1rem 3rem rgba(41, 43, 44, 0.175);
   left: 50%;
   position: absolute;
   top: 50px;
