--- a/src/css/_keyframes.sass
+++ b/src/css/_keyframes.sass
@@ -1,29 +1,29 @@
 // Mobile menu toggler
 @keyframes toggler-animation
     0%
-        width: 70%
+        width: 30px
 
     20%
-        width: 5%
+        width: 2px
 
     80%
-        width: 80%
+        width: 34px
 
     100%
-        width: 70%
+        width: 30px
 
 @keyframes toggler-animation-short
     0%
-        width: 50%
+        width: 2px
 
     20%
-        width: 5%
+        width: 2px
 
     75%
-        width: 80%
+        width: 34px
 
     100%
-        width: 50%
+        width: 24px
 
 // Mobile menu animation
 @keyframes menu-animation
