--- a/src/css/_navbar.sass
+++ b/src/css/_navbar.sass
@@ -2,171 +2,61 @@
     margin: 0
     padding: 0
 
-// Menu mobile toggler
+.mobile-menu-overlay
+    @include transition
+    background-color: $bg-overlay
+    height: 100vh
+    opacity: 0
+    position: fixed
+    visibility: hidden
+    width: 100vh
+    z-index: 2000
+
+    &.active
+        opacity: 1
+        visibility: visible
+
 .navbar-toggler
+    @include transition
     border: 0
     height: 40px
     left: 30px
-    opacity: .7
-    position: absolute
-    top: 30px
-    transition: opacity 500ms ease-in-out, background-color 300ms ease-in-out
-    width: 40px
-
-    .menu-item-1,
-    .menu-item-2,
-    .menu-item-3
-        background: $black
-        display: block
-        height: 3px
-        left: 0
-        margin-left: 15%
-        opacity: 1
-        position: absolute
-        top: 50%
-        transform: rotate(0deg)
-        transition: .25s ease-in-out
-        width: 70%
-
-    .menu-item-1
-        top: 9px
-
-    .menu-item-2
-        top: calc(50% - 1px)
-
-    .menu-item-3
-        top: calc(100% - 11px)
-        width: 50%
-
-    &:focus
-        outline: 0
-
-    &:hover
-        opacity: 1
-
-        .menu-item-1
-            animation: toggler-animation 600ms ease-in-out
-
-        .menu-item-2
-            animation: toggler-animation 600ms 100ms ease-in-out
-
-        .menu-item-3
-            animation: toggler-animation-short 600ms 200ms ease-in-out
-
-    &.active
-        background-color: $white
-        box-shadow: $box-shadow
-        opacity: 1
-        z-index: 1000
-
-        .menu-item-1,
-        .menu-item-2,
-        .menu-item-3
-            margin: 0 15%
-            top: calc(50% - 1px)
-            width: 70%
-
-        .menu-item-1
-            transform: rotate(45deg)
-
-        .menu-item-2
-            display: none
-
-        .menu-item-3
-            transform: rotate(-45deg)
-
-        &:hover
-            .menu-item-1,
-            .menu-item-2,
-            .menu-item-3
-                animation: none
-
-.icon-menu
-    height: 40px
-    opacity: .7
     padding: 0
     position: absolute
-    transition: opacity 500ms ease-in-out
+    top: 30px
     width: 40px
+
+    .menu-bar
+        fill: $black
+
+    .close-bar
+        display: none
 
     &:hover
         cursor: pointer
-        opacity: 1
 
         .menu-bar-1
-            animation: menu-ani 600ms ease-in-out
+            animation: toggler-animation 600ms ease-in-out
 
         .menu-bar-2
-            animation: menu-ani 600ms 100ms ease-in-out
+            animation: toggler-animation 600ms 100ms ease-in-out
 
         .menu-bar-3
-            animation: menu-ani-bottom 600ms 200ms ease-in-out
+            animation: toggler-animation-short 600ms 200ms ease-in-out
 
     &.active
+        background-color: $blue
+        z-index: 10000
 
-        // .menu-bar-1,
-        // .menu-bar-3
-        //     display: none
-
-        .menu-bar-2
-            // transform: rotate(45deg)
-            transform-origin: center
-
-        .menu-bar-3
+        .menu-bar
             display: none
 
-@keyframes menu-ani
-    0%
-        width: 30px
+        .close-bar
+            display: block
+            fill: $white
 
-    20%
-        width: 2px
-
-    80%
-        width: 34px
-
-    100%
-        width: 30px
-
-@keyframes menu-ani-bottom
-    0%
-        width: 24px
-
-    20%
-        width: 2px
-
-    75%
-        width: 34px
-
-    100%
-        width: 24px
-
-
-.icon-menu-close
-    animation: bounce-out 400ms ease-in-out
-    background: #00FFA7
-    box-shadow: 0 10px 10px -4px rgba(0, 0, 0, .2)
-    cursor: pointer
-    height: 24px
-    left: 26px
-    padding: 4px
-    position: fixed
-    top: 26px
-    transition: transform 150ms ease-in-out
-    z-index: 10
-    // width: 24px
-
-    &:hover
-        transform: scale(1.1)
-
-    &.hidden
-        display: none
-
-@media (min-width: 800px)
-    .icon-menu-close
-        left: 46px
-        top: 46px
-
+        &:hover
+            transform: scale(1.1)
 
 .navbar-brand
     margin: 0
@@ -205,13 +95,10 @@
     .container-fluid
         display: flex
         justify-content: center
-        // left: 50%
-        // margin-top: $spacer
         position: relative
-        // transform: translateX(-50%)
         top: 0
         width: 100%
-        z-index: 100
+        z-index: 10000
 
         .navbar-nav-header
             .active > .nav-link
@@ -228,9 +115,9 @@
                 color: $black
 
 .navbar-nav-header
-    animation: menu-animation 600ms ease-in-out
+    animation: menu-animation 300ms ease-in-out
     background-color: $white
-    box-shadow: $box-shadow
+    box-shadow: $box-shadow-lg
     left: 50%
     position: absolute
     top: 50px
