--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -69,3 +69,6 @@ $loading-spinner-opacity: .8
 $loading-spinner-stroke-style: solid
 $loading-spinner-speed: .7s
 $transparent: rgba(0, 0, 0, 0)
+
+// Overlay
+$bg-overlay: rgba($black, .2)
