--- a/src/css/_keyframes.sass
+++ b/src/css/_keyframes.sass
@@ -30,10 +30,10 @@
     0%
         box-shadow: none
         opacity: 0
-        top: -500px
+        top: 0
 
     100%
-        box-shadow: $box-shadow
+        box-shadow: $box-shadow-lg
         opacity: 1
         top: 50px
 
