--- a/src/css/_navbar.sass
+++ b/src/css/_navbar.sass
@@ -3,7 +3,7 @@
     padding: 0
 
 .mobile-menu-overlay
-    @include transition
+    @include transition($transition-overlay)
     background-color: $bg-overlay
     height: 100vh
     opacity: 0
@@ -118,14 +118,18 @@
     animation: menu-animation 300ms ease-in-out
     background-color: $white
     box-shadow: $box-shadow-lg
+    display: none
     left: 50%
+    opacity: 0
     position: absolute
-    top: 50px
+    top: 0
     transform: translateX(-50%)
     width: 70%
 
     &.active
-        display: block !important
+        display: block
+        opacity: 1
+        top: 50px
 
     .nav-item
         border-bottom: 1px solid $gray-200
@@ -153,6 +157,7 @@
         box-shadow: none
         display: inline
         left: 0
+        opacity: 1
         position: relative
         top: 0
         transform: translateX(0)
