--- a/src/css/_social.sass
+++ b/src/css/_social.sass
@@ -27,8 +27,11 @@
 
 @include media-breakpoint-up(md)
     .social-icons-footer
+        margin-top: 2 * $spacer
+
         .social-icon
             flex-basis: 10%
+            margin-top: 0
 
 // Socail icons share
 .social-icons-share
